# sentAInce

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  oasf-record.json  pyproject.toml  pyrightconfig.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
battle/: README.md  __init__.py  body.py  body_client.py  config.py  container_body.py  energy_reader.py  episode.py  epistemic.py  fidelity.py  frictions.py  full_organism.py  loki_sink.py  metrics.py  openai_proposer.py  scenarios.py  shadow_oracle.py  somatic_gate.py  statistical.py  vitals.py
battle/tests/: test_gate_modes.py  test_loki_sink.py  test_m0_reproduces_exp7.py  test_m2_frictions.py  test_m3_fidelity.py  test_m4_statistical.py  test_m5_epistemic.py  test_metrics.py  test_openai_proposer.py  test_shadow_oracle.py  test_somatic_gate.py
body/: agent.py
cerebral/: README.md  __init__.py  intents.py  journal.py
cerebral/gauge/: __init__.py  fi_gauge.py  resurrection_gauge.py
cerebral/tests/: __init__.py  test_fi_gauge.py  test_governor_mcp.py  test_journal.py  test_resurrection.py
demo/: README.md  live_crucible.py  live_homeostasis.py  probe_shadow_timeout.py  verify_shadow.py
docker/: Dockerfile.body  Dockerfile.exporter  Dockerfile.organism  compose.battle.yml  compose.fidelity.yml  compose.observe.yml  compose.realstat.yml
docker/observability/: prometheus.yml
docs/: ADR.md  CHATGPT_APP.md  CLAIMS.md  CLAIM_BOUNDARY.md  CODEX_PROVIDER_PROBE.md  COLOR_DOCTRINE.md  DEPLOYMENT.md  DEPLOY_TO_A_PROJECT.md  ENHANCEMENTS.md  ESTATE.md  FEATURES.md  GLOSSARY.md  GOVERNANCE.md  LANDSCAPE.md  MCP_SERVER.md  OPERATIONS.md  ORIENTATION_DISCIPLINE.md  PRODUCT.md  QUICKSTART.md  README.md  REASONING_DISCIPLINE.md  ROADMAP.md  SECURITY.md  SOLUTIONS_linuxmacos_coldstart_data.md  STORY.md  USER_GUIDE.md  WHITEPAPER.md
docs/battle_test/: DEMO_GUIDE.md  USER_GUIDE.md  WHITEPAPER.md
docs/use_cases/: README.md  cross_domain_others.md  manufacturing.md  medical.md  military.md  search_and_rescue.md
exocortex/: MEMORY_GAUGE_DESIGN.md  README.md  STAGE1_SOMATIC_VERDICT.md  STAGE2_EPISTEMIC_FINDING.md  __init__.py  adapter.py  audit.py  chatgpt_mcp.py  cli.py  colony.py  config.py  cue_classifier.py  deploy.py  embed_classifier.py  endocrine.py  epistemic.py  exocortex_config.json  fsutil.py  genome.py  hook.py  integrity.py  integrity_baseline.json  interocept.py  ledger.py  mcp_server.py  orient.py  provenance.py  runner.py  scenarios.py  somatic.py  somatic_ps.py  state.py  stream_runner.py  usage.py
exocortex/docs/: BRIDGE_ORGAN_DESIGN.md  CORE.md  FEATURES.md  README.md  USERS_GUIDE.md  WHITEPAPER.md
exocortex/gauge/: __init__.py  ab_outcome_gauge.py  analyze.py  attribution_gauge.py  bridge_gauge.py  coldstart_gauge.py  consolidation_gauge.py  credit_funnel_gauge.py  credit_hygiene_gauge.py  dambrogio_gauge.py  eligibility_gauge.py  endocrine_gauge.py  lock_contention_gauge.py  nonstationarity_gauge.py  palace_gauge.py  uncertainty_gauge.py
exocortex/streams/: __init__.py  interp_v1.py  smoke.py
exocortex/testbed/: README.md  __init__.py  ab_stage_a.py  ab_tasks.json  attribution_run.py  bridge_run.py  feeder.py  proof_route_a.py
exocortex/tests/: test_ab_outcome_gauge.py  test_ab_stage_a.py  test_attribution_gauge.py  test_body_estate_cli.py  test_bridge_gauge.py  test_bridge_organ.py  test_bridge_run.py  test_chatgpt_mcp.py  test_consolidation_gauge.py  test_credit_funnel_gauge.py  test_credit_hygiene_gauge.py  test_deploy.py  test_estate_dashboard.py  test_exocortex.py  test_exporter_metrics.py  test_exporter_security.py  test_features_consistency.py  test_genome_defaults.py  test_integrity.py  test_ledger.py  test_mcp_server.py  test_nonstationarity_gauge.py  test_notify.py  test_orient.py  test_provenance.py  test_somatic_ps.py  test_uncertainty_gauge.py  test_usage.py  test_why_renderer.py  test_wiki.py  test_write_integrity.py
exocortex/wiki/: __init__.py  attribute.py  bridge.py  (+6 more)
experiments/: __init__.py  exp1_autoimmune.py  exp2_hypoxia.py  exp3_crucible.py  exp4_adaptive_antibody.py  exp4r_adversarial.py  exp5_learned_signature.py  exp6_outcome_oracle.py  exp7_crucible.py  manufacturing_crucible.py  scada_crucible.py  soc_crucible.py  spacecraft_crucible.py
release/: PROVISIONALS_FILED  README.md  __init__.py  build_public.py  manifest.py  prepare_public_release.py  prepush_gates.py  projection_receipt.json
sentaince/: __init__.py
tests/: test_chatgpt_mcp.py  test_exp1_interlock.py  test_exp2_hypoxia.py  test_exp3_crucible.py  test_exp4_antibody.py  test_exp4r_adversarial.py  test_exp5_learned_signature.py  test_exp6_outcome_oracle.py  test_exp7_crucible.py  test_manufacturing_crucible.py  test_ollama_adapter.py  test_scada_crucible.py  test_soc_crucible.py  test_spacecraft_crucible.py
(+69 files in other folders)
